// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/users form 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/users/defaults",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/users form 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/users/defaults",
      },
    ],
    Array [
      Object {
        "data": Object {
          "id": 1,
          "isMobileVerified": true,
          "mobile": "13800138000",
          "name": "新名称",
        },
        "loading": true,
        "method": "POST",
        "url": "/admin-api/users",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
